@@ -9,8 +9,16 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinFCmd.c,v 1.65 2010/09/08 21:02:42 dgp Exp $
+ * RCS: @(#) $Id: tclWinFCmd.c,v 1.66 2010/09/18 05:42:26 nijtmans Exp $
  */
+
+/* TODO: This file does not compile in UNICODE mode.
+ * See [Freq 2965056]: Windows build with -DUNICODE
+ * and
+ * [Bug 3069278]: breakage on head Windows triggered by install-tzdata
+ */
+#undef UNICODE
+#undef _UNICODE
 
 #include "tclWinInt.h"
 
@@ -331,8 +339,8 @@ DoRenameFile(
 	    TCHAR *nativeSrcRest, *nativeDstRest;
 	    const char **srcArgv, **dstArgv;
 	    int size, srcArgc, dstArgc;
-	    TCHAR nativeSrcPath[MAX_PATH];
-	    TCHAR nativeDstPath[MAX_PATH];
+	    TCHAR nativeSrcPath[MAX_PATH * 2];
+	    TCHAR nativeDstPath[MAX_PATH * 2];
 	    Tcl_DString srcString, dstString;
 	    const char *src, *dst;
 
@@ -468,7 +476,7 @@ DoRenameFile(
 
 		TCHAR *nativeRest, *nativeTmp, *nativePrefix;
 		int result, size;
-		TCHAR tempBuf[MAX_PATH];
+		TCHAR tempBuf[MAX_PATH * 2];
 
 		size = tclWinProcs->getFullPathNameProc(nativeDst, MAX_PATH,
 			tempBuf, &nativeRest);
